policies/tests/disallow-latest-tag/resource-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: latest-tag-pod
  namespace: tenant-alpha
spec:
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/my-app:latest"
